dark mode + fix stock-container

--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,8 @@
 html, body {
   height: 100%;
   margin: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
+  /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important; */
+  font-family: sans-serif !important;
 }
 * {
 }
@@ -24,7 +25,7 @@ i:hover {
 color:rgb(100, 184, 218);
 }
 footer{
-  background-color: #1f2c3a;
+  background:var(--background-light);
   color:white;
   min-height: 180px;
   z-index:10;
